# locale

./: .appveyor.yml  .clang-format  .drone.star  .gitignore  CMakeLists.txt  Jamfile  README.md  build.jam
.github/workflows/: ci.yml
doc/: Doxyfile  Jamfile.v2  appendix.txt  boundary_analysys.txt  building_boost_locale.txt  changelog.txt  charset_handling.txt  collation.txt  conversions.txt  dates_times_timezones.txt  default_encoding_under_windows.txt  faq.txt  formatting_and_parsing.txt  gendoc.sh  gettext_for_windows.txt  glossary.txt  locale_gen.txt  locale_information.txt  localized_text_formatting.txt  main.txt  messages_formatting.txt  rationale.txt  recommendations_and_myths.txt  running_examples_under_windows.txt  special_thanks.txt  status_of_cpp0x_characters_support.txt  std_locales.txt  tested_compilers_and_platforms.txt  using_boost_locale.txt  using_localization_backends.txt  working_with_multiple_locales.txt
doc/html/: annotated.html  annotated_dup.js  appendix.html  appendix.js  boundary_8cpp-example.html  boundary_8hpp_source.html  boundary__point_8hpp_source.html  boundary_analysys.html  building_boost_locale.html  calendar_8cpp-example.html  changelog.html  charset_handling.html  classboost_1_1locale_1_1abstract__calendar-members.html  classboost_1_1locale_1_1abstract__calendar.html  classboost_1_1locale_1_1basic__format-members.html  classboost_1_1locale_1_1basic__format.html  classboost_1_1locale_1_1basic__format.js  classboost_1_1locale_1_1basic__message-members.html  classboost_1_1locale_1_1basic__message.html  classboost_1_1locale_1_1boundary_1_1boundary__indexing-members.html  classboost_1_1locale_1_1boundary_1_1boundary__indexing.html  classboost_1_1locale_1_1boundary_1_1boundary__point-members.html  classboost_1_1locale_1_1boundary_1_1boundary__point.html  classboost_1_1locale_1_1boundary_1_1boundary__point__index-members.html  classboost_1_1locale_1_1boundary_1_1boundary__point__index.html  classboost_1_1locale_1_1boundary_1_1segment-members.html  classboost_1_1locale_1_1boundary_1_1segment.html  classboost_1_1locale_1_1boundary_1_1segment.js  classboost_1_1locale_1_1boundary_1_1segment__index-members.html  classboost_1_1locale_1_1boundary_1_1segment__index.html  classboost_1_1locale_1_1calendar-members.html  classboost_1_1locale_1_1calendar.html  classboost_1_1locale_1_1calendar__facet-members.html  classboost_1_1locale_1_1calendar__facet.html  classboost_1_1locale_1_1collator-members.html  classboost_1_1locale_1_1collator.html  classboost_1_1locale_1_1collator.js  classboost_1_1locale_1_1collator__base-members.html  classboost_1_1locale_1_1collator__base.html  classboost_1_1locale_1_1conv_1_1conversion__error-members.html  (+258 more)
doc/style/: header.css  header_grass.css  section-basic.css
examples/: CMakeLists.txt  Jamfile.v2  boundary.cpp  calendar.cpp  collate.cpp  conversions.cpp  hello.cpp  wboundary.cpp  wconversions.cpp  whello.cpp
examples/performance/: perf_collate.cpp  perf_convert.cpp  perf_format.cpp
fuzzing/: Jamfile  fuzz_scientific_to_int.cpp
include/boost/: locale.hpp
include/boost/locale/: boundary.hpp  collator.hpp  config.hpp  conversion.hpp  date_time.hpp  date_time_facet.hpp  definitions.hpp  encoding.hpp  encoding_errors.hpp  encoding_utf.hpp  format.hpp  formatting.hpp  generator.hpp  generic_codecvt.hpp  gnu_gettext.hpp  hold_ptr.hpp  info.hpp  localization_backend.hpp  message.hpp  numpunct.hpp  stateless_encoding.hpp  time_zone.hpp  utf.hpp  utf8_codecvt.hpp  util.hpp
include/boost/locale/boundary/: boundary_point.hpp  facets.hpp  index.hpp  segment.hpp  types.hpp
include/boost/locale/detail/: allocator_traits.hpp  encoding.hpp  facet_id.hpp
include/boost/locale/util/: locale_data.hpp
meta/: libraries.json
performance/: Jamfile.v2
src/boost/locale/encoding/: codepage.cpp  conv.hpp  iconv_codepage.ipp  iconv_converter.hpp  uconv_codepage.ipp  uconv_converter.hpp  wconv_codepage.ipp  wconv_converter.hpp  win_codepages.hpp
src/boost/locale/icu/: all_generator.hpp  boundary.cpp  cdata.hpp  codecvt.cpp  codecvt.hpp  collator.cpp  conversion.cpp  date_time.cpp  formatter.cpp  formatter.hpp  formatters_cache.cpp  formatters_cache.hpp  (+8 more)
src/encoding/: codepage.cpp  conv.hpp  iconv_codepage.ipp  iconv_converter.hpp  uconv_codepage.ipp  wconv_codepage.ipp
src/icu/: boundary.cpp  codecvt.cpp  collator.cpp  conversion.cpp  date_time.cpp  formatter.cpp  formatter.hpp  icu_backend.cpp  numeric.cpp  time_zone.cpp  uconv.hpp
src/posix/: codecvt.cpp  codecvt.hpp  collate.cpp  converter.cpp  numeric.cpp  posix_backend.cpp
src/shared/: date_time.cpp  format.cpp  formatting.cpp  generator.cpp  ids.cpp  ios_prop.hpp  localization_backend.cpp  message.cpp  mo_lambda.cpp  mo_lambda.hpp
src/std/: all_generator.hpp  codecvt.cpp  collate.cpp  converter.cpp  numeric.cpp  std_backend.cpp  std_backend.hpp
src/util/: codecvt_converter.cpp  default_locale.cpp  gregorian.cpp  iconv.hpp  info.cpp  locale_data.cpp  numeric.hpp  numeric_conversion.hpp  timezone.hpp
src/win32/: api.hpp  collate.cpp  converter.cpp  lcid.cpp  numeric.cpp  win_backend.cpp
test/: CMakeLists.txt  Jamfile.v2  case_convert_test.hpp  formatting_common.hpp  generate_catalogs.sh  show_config.cpp  test_boundary.cpp  test_catalog.cpp  test_codecvt.cpp  test_codepage.cpp  test_codepage_converter.cpp  test_collate.cpp  test_config.cpp  test_convert.cpp  test_date_time.cpp  test_encoding.cpp  test_formatting.cpp  test_generator.cpp  test_icu_vs_os_timezone.cpp  test_ios_prop.cpp  test_locale.hpp  test_locale_tools.hpp  test_message.cpp  test_numpunct.cpp  test_posix_collate.cpp  test_posix_convert.cpp  test_posix_formatting.cpp  test_posix_tools.hpp  test_std_collate.cpp  test_std_convert.cpp  test_std_formatting.cpp  test_std_regex.cpp  test_stream_io.cpp  test_utf.cpp  test_util.cpp  test_util_numeric_convert.cpp  test_winapi_collate.cpp  test_winapi_convert.cpp  test_winapi_formatting.cpp
test/boostLocale/test/: posix_tools.hpp  tools.hpp  unit_test.hpp
test/cmake_test/: CMakeLists.txt  main.cpp
tools/: cross-compile-gettext.sh  download_icu.cmake
(+49 files in other folders)
